// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`okresult 1`] = `
Object {
  "body": Array [
    Object {
      "content": "<div>посмотрим, что мы получим</div><div> </div><div>-- </div><div>Добрый день !</div><div>Всё будет.</div><div>Ждите.</div><div> </div><div>До свидания.</div><div> </div>",
      "content_type": "text/html",
      "facts": "",
      "hid": "1.1",
      "isTrimmed": false,
      "lang": "ru",
    },
  ],
  "info": Object {
    "attachments": Array [
      Object {
        "class": "image",
        "display_name": "Зима.jpg",
        "download_url": "https://yadi.sk/mail/?hash=W%2BD%2BZ1%2FuU2YWhry2cwwZqhf84iJaCoRcf5ufcjAPxKE%3D",
        "hid": "1.2.1",
        "mime_type": "application/octet-stream",
        "narod": true,
        "preview_url": "https://downloader.disk.yandex.ru/preview/5f855a126fc72eee9ae6ce50d9bd9e55178222ef488d4626907d1e24f6bb6fa1/inf/gJ9KiimGoYbGCe2IrDWcVGycE3C0fjH29HfwRtDDKVygSgSgsryLElCdDXXAJj1BBccTjprd_uY3WWhDvvyBVA%3D%3D?uid=0&filename=%D0%97%D0%B8%D0%BC%D0%B0.jpg&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=S&crop=0",
        "size": 1394575,
      },
      Object {
        "class": "image",
        "display_name": "20142206111611.jpg",
        "download_url": "https://yadi.sk/mail/?hash=kXFHJ60yP35OU3IjjF124Eqoixh%2FvPBkYV9aTmTnx1Y%3D",
        "hid": "1.2.2",
        "mime_type": "application/octet-stream",
        "narod": true,
        "preview_url": "https://downloader.disk.yandex.ru/preview/fba23d69347ea8530d7b13f0d93bd19763780d23ef2e088d5395f74d7f5ccfd0/inf/MCNph6X1dFhVRPjDg6AZVt9dUgYm8cwX_kP9aPziLVsBMm8QnMHHygl7nxxrMxK74fdSUFf1LrjzcGHGPZhGmA%3D%3D?uid=0&filename=file%3A161566636631918806%3A1.2&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=S&crop=0",
        "size": 296338,
      },
      Object {
        "class": "image",
        "content_id": "",
        "display_name": "social (2).svg",
        "download_url": "",
        "hid": "1.3",
        "is_inline": false,
        "mime_type": "image/svg+xml",
        "narod": false,
        "size": "2671",
      },
    ],
    "dkim": Object {
      "domain": "yandex.ru",
      "status": "OK",
    },
    "ext_msg_id": "<20551509423699@web8o.yandex.ru>",
    "is_spam": false,
    "mid": "163818436445607056",
    "recipients": Array [
      Object {
        "email": "juleari@yandex.ru",
        "name": "juleari@yandex.ru",
        "type": 1,
      },
      Object {
        "email": "testovichok2016@yandex.ru",
        "name": "Тестовичок Тестовый Тестовичус 11111111111111111",
        "type": 2,
      },
    ],
    "references": "",
  },
  "status": Object {
    "status": 1,
  },
}
`;

exports[`еще кейс 1`] = `
Object {
  "body": Array [
    Object {
      "content": "<p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;**********<br /><br />Это письмо отправлено почтовым сервером yandex.ru.<br /><br />К сожалению, мы вынуждены сообщить Вам о том, что Ваше письмо не может<br />быть отправлено одному или нескольким адресатам. Технические подробности можно найти ниже.<br /><br />Возможные причины недоставки указаны по адресу:<br /><a href=\\"https://yandex.ru/support/mail-new/wizard/zout_send/not-got-report-yes-yandex.html\\">https://yandex.ru/support/mail-new/wizard/zout_send/not-got-report-yes-yandex.html</a><br /><br />Пожалуйста, не отвечайте на это сообщение. <br /><br />&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;**********<br /><br />This is the mail system at host yandex.ru.<br /><br />I'm sorry to have to inform you that your message could not<br />be delivered to one or more recipients. It's attached below.<br /><br />You can find the the possible reasons of the undelivered message letter here:<br /><a href=\\"https://yandex.com/support/mail-new/wizard/zout_send/not-got-report-yes-yandex.html\\">https://yandex.com/support/mail-new/wizard/zout_send/not-got-report-yes-yandex.html</a><br /><br />Please, do not reply to this message.<br /><br /><br />&lt;<a href=\\"mailto:tester.messer.2018@yandex.ru\\">tester.messer.2018@yandex.ru</a>&gt;: host 127.0.0.1[127.0.0.1] said: 554 5.1.1<br />&#160;&#160;&#160;&#160;Unknown user; c0mcQPxq <span class=\\"wmi-callto\\">164662861375736594 690</span> (in reply to end of DATA<br />&#160;&#160;&#160;&#160;command)<br /></p>",
      "content_type": "text/plain",
      "facts": "{\\"addr\\":null,\\"events\\":null,\\"unsubscribe\\":null}
",
      "hid": "1.1",
      "isTrimmed": false,
      "lang": "mis",
    },
    Object {
      "content": "<p>Reporting-MTA: dns; mxback3j.mail.yandex.net<br />X-Yandex-Queue-ID: 87B<span class=\\"wmi-callto\\">651581006</span><br />X-Yandex-Sender: rfc822; <a href=\\"mailto:maillistview@yandex.ru\\">maillistview@yandex.ru</a><br />Arrival-Date: Tue, 30 Jan 2018 13:22:20 +0300 (MSK)<br /><br />Final-Recipient: rfc822; <a href=\\"mailto:tester.messer.2018@yandex.ru\\">tester.messer.2018@yandex.ru</a><br />Original-Recipient: rfc822;<a href=\\"mailto:tester.messer.2018@yandex.ru\\">tester.messer.2018@yandex.ru</a><br />Action: failed<br />Status: 5.1.1<br />Remote-MTA: dns; 127.0.0.1<br />Diagnostic-Code: smtp; 554 5.1.1 Unknown user; c0mcQPxq <span class=\\"wmi-callto\\">164662861375736594 690</span><br /><br />Help: Please visit <a href=\\"https://yandex.ru/support/mail-new/wizard/zout_send/not-got-report-yes-other/no-such-user.html\\">https://yandex.ru/support/mail-new/wizard/zout_send/not-got-report-yes-other/no-such-user.html</a><br /></p>",
      "content_type": "message/delivery-status",
      "facts": "{\\"addr\\":null,\\"events\\":null,\\"unsubscribe\\":null}
",
      "hid": "1.2",
      "isTrimmed": false,
      "lang": "en",
    },
  ],
  "info": Object {
    "attachments": Array [
      Object {
        "class": "mail",
        "content_id": undefined,
        "display_name": "Fwd: тредик 20+.eml",
        "download_url": "",
        "hid": "1.3",
        "is_inline": undefined,
        "mime_type": "message/rfc822",
        "narod": false,
        "size": 19189,
      },
    ],
    "dkim": Object {
      "status": "NOSIG",
    },
    "ext_msg_id": "<20180130102220.CFABF158115A@mxback3j.mail.yandex.net>",
    "is_spam": false,
    "mid": "163818436445607056",
    "recipients": Array [
      Object {
        "email": "maillistview@yandex.ru",
        "name": "maillistview@yandex.ru",
        "type": 1,
      },
      Object {
        "email": "mailer-daemon@yandex.ru",
        "name": "mailer-daemon@yandex.ru",
        "type": 2,
      },
    ],
    "references": "",
  },
  "status": Object {
    "status": 1,
  },
}
`;

exports[`кейс с аттачем в bodies 1`] = `
Array [
  Object {
    "content": "<p><br /><br /></p>",
    "content_type": "text/plain",
    "facts": "",
    "hid": "1.1",
    "isTrimmed": false,
    "lang": "mis",
  },
  Object {
    "content": "<p><br /><br /><br />Отправлено с iPhone<br /></p>",
    "content_type": "text/plain",
    "facts": "",
    "hid": "1.3",
    "isTrimmed": false,
    "lang": "ru",
  },
]
`;

exports[`кейс с дисковой папкой 1`] = `
Object {
  "body": Array [
    Object {
      "content": "<div><div><br /></div><div>qqq</div><div><div>-- </div><div>123</div><div>123</div><div>123</div><div>123</div><div> </div><div>123</div></div><div><br /></div></div>",
      "content_type": "text/html",
      "facts": "",
      "hid": "1.1",
      "isTrimmed": false,
      "lang": "en",
    },
  ],
  "info": Object {
    "attachments": Array [
      Object {
        "class": "folder",
        "display_name": "фв",
        "download_url": "https://yadi.sk/mail/?hash=EjZ4FGXaLSBe1tcmkADi4Xo2lrIShK8Q0IotUKszExw%3D",
        "folder": "1",
        "hid": "1.2.1",
        "mime_type": "application/octet-stream",
        "narod": true,
        "preview_url": "",
      },
      Object {
        "class": "video",
        "display_name": "2017-04-28 16-26-17.MOV",
        "download_url": "https://yadi.sk/mail/?hash=qQXFb1ebF4xduF8VfBZ8fXEfg60sHip7NWnVVaHObXA%3D",
        "hid": "1.2.2",
        "mime_type": "application/octet-stream",
        "narod": true,
        "preview_url": "",
        "size": 60300,
      },
      Object {
        "class": "video",
        "display_name": "2017-04-28 16-26-17.MOV",
        "download_url": "https://yadi.sk/trololo",
        "hid": "1.2.3",
        "mime_type": "application/octet-stream",
        "narod": true,
        "preview_url": "",
        "size": 60300,
      },
      Object {
        "class": "image",
        "content_id": "",
        "display_name": "Group 2.png",
        "download_url": "",
        "hid": "1.3",
        "is_inline": false,
        "mime_type": "application/octet-stream",
        "narod": false,
        "preview_supported": true,
        "size": 3469,
      },
    ],
    "dkim": Object {
      "domain": "yandex.ru",
      "status": "OK",
    },
    "ext_msg_id": "<22231520259241@mailfront4.yandex.ru>",
    "is_spam": false,
    "mid": "1",
    "recipients": Array [
      Object {
        "email": "testovichok2016@yandex.ru",
        "name": "Тестовичок Тестовый Тестовичус 11111111111111111",
        "type": 1,
      },
      Object {
        "email": "testovichok2016@yandex.ru",
        "name": "Тестовичок Тестовый Тестовичус 11111111111111111",
        "type": 2,
      },
    ],
    "references": "",
  },
  "status": Object {
    "status": 1,
  },
}
`;

exports[`кейс с инлайн аттачами (должны стать неинлайновым) 1`] = `
Array [
  Object {
    "class": "pdf",
    "content_id": "",
    "display_name": "Tele2-Details-2018-06-79267038591.pdf",
    "download_url": "",
    "hid": "1.1.2",
    "is_inline": false,
    "mime_type": "application/octet-stream",
    "narod": false,
    "size": 58785,
  },
  Object {
    "class": "xls",
    "content_id": "",
    "display_name": "trololo.xls",
    "download_url": "",
    "hid": "1.1.3",
    "is_inline": false,
    "mime_type": "application/octet-stream",
    "narod": false,
    "size": 58785,
  },
]
`;
